2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Mark the EpcAuthContext argument as constant for some functions.

	* libepc/publisher.c, libepc/publisher.h: Add some const keywords.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Avoid memory management problems by properly passing authentication
	settings to libsoup: The library forgets to use the const keyword, but
	considers the context it passes the authentication callback constant.

	* libepc/publisher.c: Properly initialize server_auth field.

2007-12-03  Mathias Hasselmann  <mathias@openismus.com>

	Document the @details argument of epc_service_info_new and
	epc_service_info_new_full.

	* libepc/service-info.c: Update docs.

2007-12-02  Mathias Hasselmann  <mathias@openismus.com>

	Rebuild libraries before trying the phony docs target.

	* Makefile.am: List $(lib_LTLIBRARIES) as dependency for "docs".

2007-12-02  Mathias Hasselmann  <mathias@openismus.com>

	Allow custom service path for publishing contents and change the
	service monitor to use extensible EpcServiceInfo objects.

	* libepc/consumer.c, libepc/consumer.h: Change epc_consumer_new to use
	a single EpcServiceInfo. Update signal handlers. Add "path" property.
	Call epc_consumer_resolve_publisher before constructing URIs.
	* libepc/dispatcher.h: Remove EpcAddressFamily.
	* libepc/marshal.list: Update service monitor signals.
	* libepc/publisher.c, libepc/publisher.h: Add "contents-path"
	property. Add publisher argument to epc_publisher_get_path.
	* libepc/service-info.c, libepc/service-info.h:
	Add EpcServiceInfo and take EpcAddressFamily.
	* libepc/service-monitor.c, libepc/service-monitor.h: Change signals
	to use EpcServiceInfo, instead of a myriad of arguments.
	* docs/reference/libepc/libepc-1.0-docs.xml,
	docs/reference/libepc/libepc-1.0-sections.txt: Add EpcServiceInfo.
	* examples/consumer-ui.c: Update usage of epc_consumer_new.
	* examples/service-browser.c: Update service monitor signal handlers.